[metadata]
name = paradict
version = file: VERSION
url = https://github.com/pyrustic/paradict
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Streamable multi-format serialization with schema
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    application
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    braq
    ustrid
    written

[options.entry_points]
console_scripts =
    paradict = paradict.__main__:main
