[metadata]
name = paradict
version = file: VERSION
url = https://github.com/pyrustic/paradict
author = Pyrustic Architect
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Architect
maintainer_email = rusticalex@yahoo.com
description = Streamable multi-format serialization
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    pyrustic
# https://pypi.org/classifiers/
# Development Status :: 3 - Alpha
# Development Status :: 4 - Beta
# Development Status :: 5 - Production/Stable
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Development Status :: 4 - Beta

[options]
python_requires = >=3.5
package_dir =
    = src
packages = find:
include_package_data = true
zip_safe = false
install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    paradict = paradict.__main__:main
